--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <ul>
           <li>
             <img
-              src="./img4.jpg"
+              src="./images/img4.jpg"
               alt="Portrait of Mark Guerrero"
               width="264"
               height="260"
@@ -109,7 +109,7 @@
           </li>
           <li>
             <img
-              src="./img5.jpg"
+              src="./images/img5.jpg"
               alt="Portrait of Tom Ford"
               width="264"
               height="260"
@@ -119,7 +119,7 @@
           </li>
           <li>
             <img
-              src="./img6.jpg"
+              src="./images/img6.jpg"
               alt="Portrait of Camila Garcia"
               width="264"
               height="260"
@@ -129,7 +129,7 @@
           </li>
           <li>
             <img
-              src="./img7.jpg"
+              src="./images/img7.jpg"
               alt="Portrait of Daniel Wilson"
               width="264"
               height="260"
