--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <head>
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
